teo_template.yml
apiVersion: v1
kind: Template
metadata:
  name: teo-app
objects:
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: ${NAME}
    name: ${NAME}
  spec:
    replicas: 1
    selector:
      app: ${NAME}
      deploymentconfig: ${NAME}
    strategy:
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        labels:
          app: ${NAME}
          deploymentconfig: ${NAME}
      spec:
        containers:
        - env:
          - name: DB_TYPE
            value: postgres
          - name: DB_ADAPTER
            value: postgresql
          - name: DB_HOST
            value: postgreteo
          - name: DB_NAME
            value: redmine_production
          - name: DB_USER
            value: redmine
          - name: DB_PASS
            value: password
          image: teo/teo
          imagePullPolicy: Always
          name: ${NAME}
          ports:
          - containerPort: 22
            protocol: TCP
          - containerPort: 80
            protocol: TCP
          - containerPort: 443
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          volumeMounts:
          - mountPath: /home/redmine/data
            name: teo-1
          - mountPath: /var/log/redmine
            name: teo-2
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - emptyDir: {}
          name: teo-1
        - emptyDir: {}
          name: teo-2
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - ${NAME}
        from:
          kind: ImageStreamTag
          name: teo:latest
          namespace: teo
      type: ImageChange
  status: {}
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: ${NAME}
    name: ${NAME}
  spec:
    ports:
    - name: 22-tcp
      port: 22
      protocol: TCP
      targetPort: 22
    - name: 80-tcp
      port: 80
      protocol: TCP
      targetPort: 80
    - name: 443-tcp
      port: 443
      protocol: TCP
      targetPort: 443
    selector:
      deploymentconfig: ${NAME}
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: Route
  metadata:
    labels:
      app: ${NAME}
    name: ${NAME}
  spec:
    host: ${APPLICATION_DOMAIN}
    port:
      targetPort: 80-tcp
    to:
      kind: Service
      name: ${NAME}
parameters:
- description: Name of the instance
  name: NAME
  value: teo
- description: Service, Hostname or PostgreSQL server IP address
  name: DB_HOST
  value: postgresteo
- description: Database Name
  name: DB_NAME
  value: redmine_production
- description: Database Username
  name: DB_USER
  value: redmine
- description: Database Password
  name: DB_PASS
  value: password
